k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  selector:
    app: quiz-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
